dotCMS/core#23337 tabs broken style fixed

--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-containers/dot-container-create/dot-container-code/dot-container-code.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-containers/dot-container-create/dot-container-code/dot-container-code.component.scss
@@ -13,16 +13,23 @@
         height: 100%;
     }
     .p-tabview-panels {
+        // hiding because it is add content type tab there is no need to show this content
+        p-tabpanel:first-child {
+            display: none;
+        }
         height: 100%;
         flex-grow: 1;
         flex-basis: 0;
         overflow: auto;
     }
+
+    .p-tabview-nav-content {
+        border: 1px solid $input-border-color;
+    }
     .p-tabview-nav {
         padding: 0;
-        background: $white;
-        border: 1px solid $input-border-color;
-        border-bottom: none;
+        // background: $white;
+        // border-bottom: none;
     }
 
     .p-tabview-panel {
@@ -35,13 +42,27 @@
 
     .p-tabview-nav-next {
         width: 40px;
-        background-color: #f1f3f4;
         border: 1px solid $input-border-color;
         border-left: none;
-        border-bottom: none;
+        background: $gray-bg;
+    }
+
+    .p-tabview-nav-prev {
+        width: 40px;
+        border: 1px solid $input-border-color;
+        border-right: none;
+        background: $gray-bg;
+    }
+
+    .p-tabview .p-tabview-nav {
+        border: none;
     }
 
     .p-tabview .p-tabview-nav li.p-highlight .p-tabview-nav-link {
+        border-bottom: 2px solid var(--color-sec);
+    }
+
+    .p-tabview .p-tabview-nav li:not(.p-highlight):not(.p-disabled):hover .p-tabview-nav-link {
         border-bottom: 2px solid var(--color-sec);
     }
 
